// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the route table's addressable surface > registers exactly these paths in MULTI tenancy 1`] = `
[
  "/ (index)  →  landing.tsx",
  "/*  →  catch-all.tsx",
  "/.well-known/agent-skills/index.json  →  agent-skills-index.ts",
  "/.well-known/agent-skills/topos/:file  →  agent-skills-file.ts",
  "/.well-known/skills/index.json  →  agent-skills-index-legacy.ts",
  "/:ws  →  workspace-dashboard.tsx",
  "/:ws/channels  →  channels-index.tsx",
  "/:ws/channels/:channel  →  channel-detail.tsx",
  "/:ws/channels/:channel/history  →  channel-history.tsx",
  "/:ws/channels/:channel/settings  →  channel-settings.tsx",
  "/:ws/channels/new  →  channel-new.tsx",
  "/:ws/invite/:token  →  invite-redeem.tsx",
  "/:ws/mcp/:server  →  skill-current.tsx  [id=mcp-current]",
  "/:ws/mcp/:server/history  →  skill-history.tsx  [id=mcp-history]",
  "/:ws/mcp/:server/proposals  →  skill-proposals.tsx  [id=mcp-proposals]",
  "/:ws/mcp/:server/proposals/:versionId  →  proposal-review.tsx  [id=mcp-proposal-review]",
  "/:ws/mcp/:server/settings  →  skill-settings.tsx  [id=mcp-settings]",
  "/:ws/mcp/:server/versions/:versionId  →  version-files.tsx  [id=mcp-versions]",
  "/:ws/mcp/:server/versions/:versionId/files/*  →  file-view.tsx  [id=mcp-file-view]",
  "/:ws/mcp/new  →  mcp-new.tsx",
  "/:ws/members  →  workspace-members.tsx",
  "/:ws/profile  →  profile.tsx",
  "/:ws/registry/v0.1/*  →  mcp-registry.ts",
  "/:ws/settings  →  workspace-settings.tsx",
  "/:ws/settings/archive  →  workspace-archive.tsx",
  "/:ws/settings/export  →  workspace-export.ts",
  "/:ws/settings/sessions  →  sessions.tsx",
  "/:ws/skills/:skill  →  skill-current.tsx",
  "/:ws/skills/:skill/history  →  skill-history.tsx",
  "/:ws/skills/:skill/proposals  →  skill-proposals.tsx",
  "/:ws/skills/:skill/proposals/:versionId  →  proposal-review.tsx",
  "/:ws/skills/:skill/settings  →  skill-settings.tsx",
  "/:ws/skills/:skill/versions/:versionId  →  version-files.tsx",
  "/:ws/skills/:skill/versions/:versionId/files/*  →  file-view.tsx",
  "/:ws/skills/import  →  skill-import.tsx",
  "/:ws/visibility  →  visibility.tsx",
  "/account/sessions  →  your-sessions.tsx",
  "/agent  →  agent.ts",
  "/api/auth/*  →  api.auth.ts",
  "/api/memberships  →  api.memberships.ts",
  "/api/v1/*  →  api.v1.$.ts",
  "/api/v1/login/authorize  →  api.v1.login-authorize.ts",
  "/api/v1/login/connect  →  api.v1.login-connect.ts",
  "/api/v1/login/token  →  api.v1.login-token.ts",
  "/api/v1/proposals  →  api.v1.propose.ts",
  "/api/v1/publish  →  api.v1.publish.ts",
  "/api/v1/reverts  →  api.v1.reverts.ts",
  "/api/v1/reviews  →  api.v1.reviews.ts",
  "/api/v1/session  →  api.v1.session.ts",
  "/api/v1/workspaces/:ws/channels  →  api.v1.channels.ts",
  "/api/v1/workspaces/:ws/channels/:channel/protection  →  api.v1.channel-protection.ts",
  "/api/v1/workspaces/:ws/delivery  →  api.v1.delivery.ts",
  "/api/v1/workspaces/:ws/invitations  →  api.v1.invitations.ts",
  "/api/v1/workspaces/:ws/me  →  api.v1.me.ts",
  "/api/v1/workspaces/:ws/notices/ack  →  api.v1.notices-ack.ts",
  "/api/v1/workspaces/:ws/proposals  →  api.v1.ws-proposals.ts",
  "/api/v1/workspaces/:ws/report  →  api.v1.report.ts",
  "/api/v1/workspaces/:ws/skills  →  api.v1.skills-index.ts",
  "/api/v1/workspaces/:ws/skills/:skill/bundles/:objectId  →  api.v1.skill-object.ts",
  "/api/v1/workspaces/:ws/skills/:skill/current  →  api.v1.skill-current.ts",
  "/api/v1/workspaces/:ws/skills/:skill/log  →  api.v1.skill-log.ts",
  "/api/v1/workspaces/:ws/skills/:skill/proposals  →  api.v1.skill-proposals.ts",
  "/api/v1/workspaces/:ws/skills/:skill/protection  →  api.v1.skill-protection.ts",
  "/api/v1/workspaces/:ws/skills/:skill/versions/:versionId  →  api.v1.skill-version.ts",
  "/app  →  app-entry.tsx",
  "/claim  →  reserved.tsx",
  "/compose-init-db.sh  →  compose-init-db.ts",
  "/compose.yml  →  compose-yml.ts",
  "/docs  →  docs-page.tsx  [id=docs-index]",
  "/docs.md  →  docs-markdown.ts  [id=docs-index-md]",
  "/docs/*  →  docs-page.tsx  [id=docs-page]",
  "/docs/:page.md  →  docs-markdown.ts  [id=docs-md-1]",
  "/docs/:section/:page.md  →  docs-markdown.ts  [id=docs-md-2]",
  "/docs/:section/:subsection/:page.md  →  docs-markdown.ts  [id=docs-md-3]",
  "/docs/llms.txt  →  docs-llms-txt.ts",
  "/healthz  →  healthz.ts",
  "/install  →  install.ts",
  "/install.sh  →  install-sh.ts",
  "/llms.txt  →  llms-txt.ts",
  "/login  →  login.tsx",
  "/new  →  workspace-new.tsx",
  "/recovery  →  recovery.tsx",
  "/verify  →  verify.tsx",
]
`;

exports[`the route table's addressable surface > registers exactly these paths in SINGLE tenancy 1`] = `
[
  "/ (index)  →  workspace-dashboard.tsx",
  "/*  →  catch-all.tsx",
  "/.well-known/agent-skills/index.json  →  agent-skills-index.ts",
  "/.well-known/agent-skills/topos/:file  →  agent-skills-file.ts",
  "/.well-known/skills/index.json  →  agent-skills-index-legacy.ts",
  "/account/sessions  →  your-sessions.tsx",
  "/agent  →  agent.ts",
  "/api/auth/*  →  api.auth.ts",
  "/api/memberships  →  api.memberships.ts",
  "/api/v1/*  →  api.v1.$.ts",
  "/api/v1/login/authorize  →  api.v1.login-authorize.ts",
  "/api/v1/login/connect  →  api.v1.login-connect.ts",
  "/api/v1/login/token  →  api.v1.login-token.ts",
  "/api/v1/proposals  →  api.v1.propose.ts",
  "/api/v1/publish  →  api.v1.publish.ts",
  "/api/v1/reverts  →  api.v1.reverts.ts",
  "/api/v1/reviews  →  api.v1.reviews.ts",
  "/api/v1/session  →  api.v1.session.ts",
  "/api/v1/workspaces/:ws/channels  →  api.v1.channels.ts",
  "/api/v1/workspaces/:ws/channels/:channel/protection  →  api.v1.channel-protection.ts",
  "/api/v1/workspaces/:ws/delivery  →  api.v1.delivery.ts",
  "/api/v1/workspaces/:ws/invitations  →  api.v1.invitations.ts",
  "/api/v1/workspaces/:ws/me  →  api.v1.me.ts",
  "/api/v1/workspaces/:ws/notices/ack  →  api.v1.notices-ack.ts",
  "/api/v1/workspaces/:ws/proposals  →  api.v1.ws-proposals.ts",
  "/api/v1/workspaces/:ws/report  →  api.v1.report.ts",
  "/api/v1/workspaces/:ws/skills  →  api.v1.skills-index.ts",
  "/api/v1/workspaces/:ws/skills/:skill/bundles/:objectId  →  api.v1.skill-object.ts",
  "/api/v1/workspaces/:ws/skills/:skill/current  →  api.v1.skill-current.ts",
  "/api/v1/workspaces/:ws/skills/:skill/log  →  api.v1.skill-log.ts",
  "/api/v1/workspaces/:ws/skills/:skill/proposals  →  api.v1.skill-proposals.ts",
  "/api/v1/workspaces/:ws/skills/:skill/protection  →  api.v1.skill-protection.ts",
  "/api/v1/workspaces/:ws/skills/:skill/versions/:versionId  →  api.v1.skill-version.ts",
  "/app  →  app-entry.tsx",
  "/channels  →  channels-index.tsx",
  "/channels/:channel  →  channel-detail.tsx",
  "/channels/:channel/history  →  channel-history.tsx",
  "/channels/:channel/settings  →  channel-settings.tsx",
  "/channels/new  →  channel-new.tsx",
  "/claim  →  claim.tsx",
  "/compose-init-db.sh  →  compose-init-db.ts",
  "/compose.yml  →  compose-yml.ts",
  "/docs  →  docs-page.tsx  [id=docs-index]",
  "/docs.md  →  docs-markdown.ts  [id=docs-index-md]",
  "/docs/*  →  docs-page.tsx  [id=docs-page]",
  "/docs/:page.md  →  docs-markdown.ts  [id=docs-md-1]",
  "/docs/:section/:page.md  →  docs-markdown.ts  [id=docs-md-2]",
  "/docs/:section/:subsection/:page.md  →  docs-markdown.ts  [id=docs-md-3]",
  "/docs/llms.txt  →  docs-llms-txt.ts",
  "/healthz  →  healthz.ts",
  "/install  →  install.ts",
  "/install.sh  →  install-sh.ts",
  "/invite/:token  →  invite-redeem.tsx",
  "/llms.txt  →  llms-txt.ts",
  "/login  →  login.tsx",
  "/mcp/:server  →  skill-current.tsx  [id=mcp-current]",
  "/mcp/:server/history  →  skill-history.tsx  [id=mcp-history]",
  "/mcp/:server/proposals  →  skill-proposals.tsx  [id=mcp-proposals]",
  "/mcp/:server/proposals/:versionId  →  proposal-review.tsx  [id=mcp-proposal-review]",
  "/mcp/:server/settings  →  skill-settings.tsx  [id=mcp-settings]",
  "/mcp/:server/versions/:versionId  →  version-files.tsx  [id=mcp-versions]",
  "/mcp/:server/versions/:versionId/files/*  →  file-view.tsx  [id=mcp-file-view]",
  "/mcp/new  →  mcp-new.tsx",
  "/members  →  workspace-members.tsx",
  "/profile  →  profile.tsx",
  "/recovery  →  recovery.tsx",
  "/registry/v0.1/*  →  mcp-registry.ts",
  "/settings  →  workspace-settings.tsx",
  "/settings/archive  →  workspace-archive.tsx",
  "/settings/export  →  workspace-export.ts",
  "/settings/sessions  →  sessions.tsx",
  "/skills/:skill  →  skill-current.tsx",
  "/skills/:skill/history  →  skill-history.tsx",
  "/skills/:skill/proposals  →  skill-proposals.tsx",
  "/skills/:skill/proposals/:versionId  →  proposal-review.tsx",
  "/skills/:skill/settings  →  skill-settings.tsx",
  "/skills/:skill/versions/:versionId  →  version-files.tsx",
  "/skills/:skill/versions/:versionId/files/*  →  file-view.tsx",
  "/skills/import  →  skill-import.tsx",
  "/verify  →  verify.tsx",
  "/visibility  →  visibility.tsx",
]
`;
